[package]
name = "fusion-translator"
edition = "2021"
version = "1.0.1"
description = "A high-performance multilingual translation library supporting multiple translation services"
license = "MIT"
repository = "https://github.com/tornado-product/FusionTranslator"
documentation = "https://docs.rs/fusion-translator"
# # # # # publish = false

[features]

[lib]
name = "fusion_translator"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
sha2 = "0.10.9"
rand = "0.9.2"
uuid = { version = "1.18", features = ["v1"] }
tokio = { version = "1.0", features = ["process", "io-util", "rt-multi-thread", "macros"] }
thiserror = "2.0.12"
md5 = "0.8"
hex = "0.4.3"
anyhow = "1.0.100"
scraper = "0.24.0"
dotenv = "0.15.0"
lang-generator = "1.0.6"